STYLING - Made overlays fixed instead of absolute to fix them being off screen

--- a/app/assets/stylesheets/carpe.scss
+++ b/app/assets/stylesheets/carpe.scss
@@ -523,7 +523,7 @@ form.thin
 .overlay-box
 {
 	display: none;
-	position: absolute;
+	position: fixed;
 	top: 10%;
 	left: 0;
 	right: 0;
